
AC_PREREQ([1.0])
AC_INIT([schedule], [0.1], [nikhilgtr@gmail.com])
AC_CONFIG_SRCDIR([src/])
AM_INIT_AUTOMAKE
PKG_PROG_PKG_CONFIG

AM_PROG_LIBTOOL

EXTERNAL_CFLAGS="$CFLAGS"

AC_PROG_CC
AC_PROG_INSTALL
AC_LANG([C])

AC_CHECK_HEADER_STDBOOL
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T


AC_CONFIG_FILES([
        Makefile
        src/Makefile])
AC_OUTPUT

